# dat156

./: 404.html  README.md  atom.xml  config.toml  i18n.json  index.html  robots.txt  sitemap.xml
.github/workflows/: main.yaml
axum-example/: Cargo.toml  bacon.toml
axum-example/src/: errors.rs  icon.rs  main.rs
axum-example/static/svg/: svg.css
blog/34/: index.html
blog/35/: index.html
blog/36/: index.html
blog/37/: index.html
content/: _index.md  forord.md
content/blog/: 00_forarbeid.md  _index.md
content/blog/34/: index.md
content/blog/35/: index.md
content/blog/36/: index.md
content/blog/37/: index.md
forord/: index.html
page/1/: index.html
page/2/: index.html
