[package]
name = "axum-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["query"]}
hypertext = { version = "0.12.1", features = ["axum"]}
maud = { version = "0.27.0", features = ["axum"] }
tokio = { version = "1.47.1", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
