[package]
name = "axum-example"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["query"]}
hypertext = { version = "0.10.0", features = ["axum"]}
tokio = { version = "1.47.1", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
tower-http = {version = "0.6.6", features = ["fs"]}
tower = "0.5.2"
